--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
         </ul>
       </nav>
       <div class="social">
-        <a href=""><i class="fab fa-github fa-2x"></i></a>
-        <a href=""><i class="fab fa-facebook fa-2x"></i></a>
-        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
-        <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="https://github.com/ahmedelhappy/"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://fb.com/ahmadelhappy"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="https://instagram.com/ahmedelhappy"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.x.com"><i class="fab fa-twitter fa-2x"></i></a>
       </div>
     </div>
   </footer>
