Add some hover effect to the footer links. Make the logo as a clickable link.

--- a/features.html
+++ b/features.html
@@ -18,7 +18,7 @@
 
   <div class="navbar">
     <div class="container flex">
-      <h1 class="logo">Elhappy.</h1>
+      <h1 class="logo"><a href="index.html">Elhappy</a></h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -113,7 +113,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a class="test" href="index.html">Home</a></li>
           <li><a href="features.html">Features</a></li>
           <li><a href="docs.html">Docs</a></li>
         </ul>
